<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="golbegol.brlyan.golbegol.ui.RegisterActivity">


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_margin="30dp"
        android:minHeight="200dp"
        app:cardBackgroundColor="#5cFFFFFF"
        app:cardCornerRadius="15dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#bbffffff"
                android:gravity="center"
                android:paddingTop="10dp"
                android:text="@string/Register"
                android:textAllCaps="true"
                android:textColor="#000000"
                android:textSize="40sp"
                android:typeface="serif" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#bbffffff"
                android:gravity="center"
                android:paddingBottom="5dp"
                android:text="@string/makeYourLife"
                android:textColor="#c4000000"
                android:textSize="20sp"
                android:typeface="serif" />


            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="25dp"
                app:cardBackgroundColor="#5cFFFFFF"
                app:cardCornerRadius="15dp">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">


                    <ImageView

                        android:id="@+id/mail"
                        android:layout_width="50dp"
                        android:layout_height="60dp"
                        android:background="#bbffffff"
                        android:padding="5dp"
                        android:paddingLeft="10dp"
                        android:src="@drawable/ic_mail" />


                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:gravity="center_vertical"
                        android:hint="@string/mailAddress"
                        android:inputType="textEmailAddress"
                        android:paddingLeft="7dp" />

                </LinearLayout>


            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="15dp"
                app:cardBackgroundColor="#5cFFFFFF"
                app:cardCornerRadius="15dp">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">


                    <ImageView

                        android:id="@+id/password"
                        android:layout_width="50dp"
                        android:layout_height="60dp"
                        android:background="#bbffffff"
                        android:padding="5dp"
                        android:paddingLeft="10dp"
                        android:src="@drawable/ic_password" />


                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:gravity="center_vertical"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:padding="7dp" />

                </LinearLayout>


            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="15dp"
                app:cardBackgroundColor="#5cFFFFFF"
                app:cardCornerRadius="15dp">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">


                    <ImageView

                        android:layout_width="50dp"
                        android:layout_height="60dp"
                        android:background="#bbffffff"
                        android:padding="5dp"
                        android:paddingLeft="10dp"
                        android:src="@drawable/ic_password" />


                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center_vertical"
                        android:gravity="center_vertical"
                        android:hint="@string/passwordRepeat"
                        android:inputType="textPassword"
                        android:padding="7dp" />

                </LinearLayout>


            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="15dp"
                app:cardBackgroundColor="#bbffffff"
                app:cardCornerRadius="3dp">


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">


                    <TextView
                        android:id="@+id/Register"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:hint="@string/Register"
                        android:padding="7dp"
                        android:textColor="@color/colorAccent"
                        android:textSize="18sp"
                        android:textStyle="bold" />

                </LinearLayout>


            </android.support.v7.widget.CardView>



        </LinearLayout>


    </android.support.v7.widget.CardView>


    <com.flaviofaria.kenburnsview.KenBurnsView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/image_back_intro" />


</RelativeLayout>
